[project]
name = "aservix-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ 
    "langgraph",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "pydantic",
    "langgraph-checkpoint-postgres",
    ]

    [project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]",
]
