[project]
name = "aservix-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ 
    "langgraph",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "pydantic",
    "langgraph-checkpoint-postgres",
    ]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.12",
]

  